k8s/proxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdex-proxy
  labels:
    app: kdex-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdex-proxy
  template:
    metadata:
      labels:
        app: kdex-proxy
    spec:
      containers:
      - name: bash
        # For testing. So we can exec in to see the contents of /modules.
        image: bash
        command:
        - "/usr/local/bin/bash"
        - "-c"
        - |
          trap 'echo "Received signal, exiting..."; exit 0' SIGINT SIGTERM
          sleep infinity &
          wait $!
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - mountPath: /modules
          name: kdex-proxy-pvc
        - mountPath: /etc/kdex/apps
          name: kdex-proxy-config
          subPath: apps
        - mountPath: /etc/kdex/module_body
          name: kdex-proxy-config
          subPath: module_body
      - name: proxy
        image: registry:5000/kdex-tech/proxy:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
        livenessProbe:
          httpGet:
            path: /~/p
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /~/p
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        volumeMounts:
        - mountPath: /modules
          name: kdex-proxy-pvc
        - mountPath: /etc/kdex/apps
          name: kdex-proxy-config
          subPath: apps
        - mountPath: /etc/kdex/module_body
          name: kdex-proxy-config
          subPath: module_body
      volumes:
      - name: kdex-proxy-pvc
        persistentVolumeClaim:
          claimName: kdex-proxy-pvc
      - name: kdex-proxy-config
        configMap:
          name: kdex-proxy-config
      securityContext:
        fsGroup: 65532
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
